# mage

./: CMakeLists.txt  install.sh  mage.cpp  mage_config.h  main.cpp  mcp23017.cpp  mcp23017.h  readme.md  usb_descriptors.c
configurator/: CMakeLists.txt  config_file.h  configure.sh  helper.h  keycode.h  keycode_helpers.h  main.cpp  main.h  serial.h
configurator/tui/: grid_container.cpp  gridcontainer.cpp  gridcontainer.hpp  key_input.h  key_input.hpp  tui.cpp  tui.h  tui.hpp
firmware/: CMakeLists.txt  mage.cpp  mage.h  mage_config.h  main.cpp  tusb_config.h
hardware/: MageV2.kicad_pcb  MageV2.kicad_prl  MageV2.kicad_pro  MageV2.kicad_sch  gerber  keyboard_left  keyboard_right
hardware/gerber/: MageV2-B_Cu.gbr  MageV2-B_Mask.gbr  MageV2-B_Paste.gbr  MageV2-B_Silkscreen.gbr  MageV2-Edge_Cuts.gbr  MageV2-F_Cu.gbr  MageV2-F_Mask.gbr  MageV2-F_Paste.gbr  MageV2-F_Silkscreen.gbr  MageV2-NPTH.drl  MageV2-PTH.drl  MageV2-job.gbrjob
include/: mage_const.h
qmk/: kb-layout.json
qmk/magev2/: config.h  halconf.h  info.json  mage_const.h  magev2.c  magev2.h  matrix.c  mcp23017.h  rules.mk
qmk/magev2/keymaps/default/: keymap.c
